# Argless

./: .gitignore  CMakeLists.txt  LICENSE.md
Argless/: CMakeLists.txt
Argless/src/: Argless.hpp
Argless/src/Argless/: ArgType.hpp  Argless.hpp  Core.hpp  Core_undef.hpp  Exception.hpp  Helper.hpp  Parser.hpp  Rule.hpp
Argless/src/Argless/Parser/: Array.hpp  Enum.hpp  Pointer.hpp  Variant.hpp
Sandbox/: CMakeLists.txt
Sandbox/src/: double_definition.cpp  main.cpp
include/: Argless.hpp
